# wisp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  grammar.txt
include/: wast.h  wcompiler.h  wisp.h  wobject.h  wrepl.h  wscanner.h  wsymbol.h
src/: wcompiler.c  wisp.c  wrepl.c  wscanner.c  wsymbol.c
